<resources>
    <string name="app_name">GitHub API</string>
    <string name="search">Search</string>
    <string name="search_hint">Username</string>
    <string name="setting">Setting</string>
    <string name="username">Username</string>
    <string name="url">url</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="follower_amount">99</string>
    <string name="repo_amount">99</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="following_amount">99</string>
    <string name="follower">Follower</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
</resources>