<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserDetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_detail_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_detail_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="@+id/iv_detail_avatar"
            app:layout_constraintStart_toStartOf="@+id/iv_detail_avatar"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_avatar" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_username"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_username" />

        <TextView
            android:id="@+id/tv_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/location"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

        <TextView
            android:id="@+id/tv_detail_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_location"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_location" />

        <TextView
            android:id="@+id/tv_follower_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/follower_amount"
            app:layout_constraintBottom_toTopOf="@+id/tv_follower"
            app:layout_constraintEnd_toEndOf="@+id/tv_follower"
            app:layout_constraintStart_toStartOf="@+id/tv_follower" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/follower"
            app:layout_constraintBottom_toBottomOf="@+id/tv_following"
            app:layout_constraintEnd_toStartOf="@+id/tv_following" />

        <TextView
            android:id="@+id/tv_following_amount"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="8dp"
            android:text="@string/following_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_company" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="@+id/tv_following_amount"
            app:layout_constraintStart_toStartOf="@+id/tv_following_amount"
            app:layout_constraintTop_toBottomOf="@+id/tv_following_amount" />

        <TextView
            android:id="@+id/tv_repository_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/repo_amount"
            app:layout_constraintBottom_toTopOf="@+id/tv_repository"
            app:layout_constraintEnd_toEndOf="@+id/tv_repository"
            app:layout_constraintStart_toStartOf="@+id/tv_repository" />

        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/repository"
            app:layout_constraintBottom_toBottomOf="@+id/tv_following"
            app:layout_constraintStart_toEndOf="@+id/tv_following" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@color/white"
        android:layout_marginTop="16dp"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>